docs-archive/apache-airflow-providers-microsoft-azure/1.3.0/_sources/_api/airflow/providers/microsoft/azure/hooks/base_azure/index.rst.txt
:mod:`airflow.providers.microsoft.azure.hooks.base_azure`
=========================================================

.. py:module:: airflow.providers.microsoft.azure.hooks.base_azure


Module Contents
---------------

.. py:class:: AzureBaseHook(sdk_client: Any, conn_id: str = 'azure_default')

   Bases: :class:`airflow.hooks.base.BaseHook`

   This hook acts as a base hook for azure services. It offers several authentication mechanisms to
   authenticate the client library used for upstream azure hooks.

   :param sdk_client: The SDKClient to use.
   :param conn_id: The azure connection id which refers to the information to connect to the service.

   .. attribute:: conn_name_attr
      :annotation: = conn_id

      

   .. attribute:: default_conn_name
      :annotation: = azure_default

      

   .. attribute:: conn_type
      :annotation: = azure

      

   .. attribute:: hook_name
      :annotation: = Azure

      

   
   .. method:: get_conn(self)

      Authenticates the resource using the connection id passed during init.

      :return: the authenticated client.




